force-app/main/default/objects/Application__c/fields/Application_Age__c.field-meta.xml
<CustomField>
    <fullName>Application_Age__c</fullName>
    <formula>TODAY()  -  Applied_Date__c</formula>
    <label>Application Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>