force-app/main/default/objects/Application__c/fields/Cleared_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Interviews__c</fullName>
    <description>Display the total number of Interview records where the Result is marked as Cleared.</description>
    <label>Cleared Interviews</label>
    <summaryFilterItems>
        <field>Interview__c.Result__c</field>
        <operation>equals</operation>
        <value>Cleared</value>
    </summaryFilterItems>
    <summaryForeignKey>Interview__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>