force-app/main/default/objects/Application__c/fields/Eligible_Branches__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Branches__c</fullName>
    <label>Eligible Branches</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>