force-app/main/default/objects/Application__c/fields/Job_Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Portal_Link__c</fullName>
    <label>Job Portal Link</label>
    <type>Url</type>
</CustomField>