force-app/main/default/objects/Application__c/fields/Offered_Package__c.field-meta.xml
<CustomField>
    <fullName>Offered_Package__c</fullName>
    <label>Offered Package</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>