force-app/main/default/objects/Application__c/fields/PPO_Offered__c.field-meta.xml
<CustomField>
    <fullName>PPO_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PPO Offered</label>
    <type>Checkbox</type>
</CustomField>