force-app/main/default/objects/Application__c/fields/Self_Applied__c.field-meta.xml
<CustomField>
    <fullName>Self_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Applied</label>
    <type>Checkbox</type>
</CustomField>