force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>PPT</fullName>
            </value>
            <value>
                <fullName>Aptitude</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Off-Campus Record Type</fullName>
            </value>
            <value>
                <fullName>Resume Shortlisted</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Internship Record Type</fullName>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>PPO Extended</fullName>
            </value>
            <value>
                <fullName>Joined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>