force-app/main/default/objects/Application__c/fields/Stipend__c.field-meta.xml
<CustomField>
    <fullName>Stipend__c</fullName>
    <label>Stipend</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>