force-app/main/default/objects/Application__c/fields/Total_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Total_Interviews__c</fullName>
    <description>Display the total number of Interview records related to an Application</description>
    <label>Total Interviews</label>
    <summaryForeignKey>Interview__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>