force-app/main/default/objects/Application__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auditorium 1</fullName>
            </value>
            <value>
                <fullName>Seminar Hall</fullName>
            </value>
            <value>
                <fullName>Lab A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>