force-app/main/default/objects/Application__c/recordTypes/Internship.recordType-meta.xml
<RecordType>
    <fullName>Internship</fullName>
    <active>true</active>
    <description>Used for internship opportunities and PPO-based hiring.</description>
    <label>Internship</label>
</RecordType>