force-app/main/default/objects/Application__c/recordTypes/Off_Campus.recordType-meta.xml
<RecordType>
    <fullName>Off_Campus</fullName>
    <active>true</active>
    <description>Used when students apply through external job portals, company websites, or referrals.</description>
    <label>Off-Campus</label>
</RecordType>