force-app/main/default/objects/Application__c/recordTypes/On_Campus.recordType-meta.xml
<RecordType>
    <fullName>On_Campus</fullName>
    <active>true</active>
    <description>Used when companies visit the college and conduct placement drives.</description>
    <label>On-Campus</label>
</RecordType>