force-app/main/default/objects/Application__c/validationRules/Prevent_Future_Applied_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Future_Applied_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Applied_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Applied_Date__c</errorDisplayField>
    <errorMessage>Applications cannot be submitted in the future.</errorMessage>
</ValidationRule>